--- a/LeaniM/Atoms/productos.html
+++ b/LeaniM/Atoms/productos.html
@@ -34,7 +34,7 @@
     rel="icon" type="image/x-icon" />
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body class="hold-transition sidebar-mini layout-fixed d-none">
   <div class="wrapper">
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -44,16 +44,16 @@
           <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./" class="nav-link">Dashboard</a>
+          <a href="./" class="nav-link" hidden>Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Productos" class="nav-link">Productos</a>
+          <a href="./Productos" class="nav-link" hidden>Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Pagos" class="nav-link">Pagos</a>
+          <a href="./Pagos" class="nav-link" hidden>Pagos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Remitos" class="nav-link">Remitos</a>
+          <a href="./Remitos" class="nav-link" hidden>Remitos</a>
         </li>
       </ul>
 
@@ -90,8 +90,8 @@
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-            <li class="nav-item">
-              <a href="./Index" class="nav-link">
+            <li class="nav-item" hidden>
+              <a href="./" class="nav-link">
                 <i class="fa fa-home nav-icon"></i>
                 <p>Dashboard</p>
               </a>
@@ -107,17 +107,12 @@
               <ul class="nav nav-treeview bg-navy pl-2">
                 <li class="nav-item">
                   <a href="./Clientes" class="nav-link">
-                    <i class="fa fa-search nav-icon"></i>
-                    <p>Búsqueda</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="./AltaClientes" class="nav-link">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
                 </li>
-                <li class="nav-item">
+
+                <li class="nav-item" hidden>
                   <a href="./PanelClientes" class="nav-link">
                     <i class="far fa-user nav-icon"></i>
                     <p>Panel Cliente</p>
@@ -143,13 +138,13 @@
                 <p>Compras</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Remitos" class="nav-link">
                 <i class="fas fa-columns nav-icon"></i>
                 <p>Remitos</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Pagos" class="nav-link">
                 <i class="fas fa-wallet nav-icon"></i>
                 <p>Pagos</p>
@@ -242,8 +237,10 @@
                         <div class="form-group">
                           <label>IVA</label>
                           <select class="form-control" id="iva" required>
+                            <option value="0">0%</option>
                             <option value="10.5">10.5%</option>
                             <option selected value="21">21%</option>
+                            <option value="27">27%</option>
                           </select>
                         </div>
                       </div>
@@ -252,7 +249,7 @@
                         <div class="form-group">
                           <label>Seleccione el Rubro</label>
                           <select class="form-control" id="rubro" required>
-                            <option disabled selected hidden value="Varios">Varios</option>
+                            <option disabled selected hidden></option>
                           </select>
                         </div>
                       </div>
@@ -304,7 +301,6 @@
                         <th>Nombre del Producto</th>
                         <th>Marca</th>
                         <th>Rubro</th>
-                        <th>Calidad</th>
                         <th>Precio</th>
                         <th style="max-width: 80px">IVA</th>
                         <th style="max-width: 60px">Modificar</th>
@@ -315,7 +311,6 @@
                         <th>Nombre del Producto</th>
                         <th>Marca</th>
                         <th>Rubro</th>
-                        <th>Calidad</th>
                         <th>Precio</th>
                         <th style="max-width: 80px">IVA</th>
                         <th style="max-width: 60px">Modificar</th>
@@ -392,8 +387,10 @@
                 <div class="form-group">
                   <label>IVA</label>
                   <select class="form-control" id="ivaEdit" required>
+                    <option value="0">0%</option>
                     <option value="10.5">10.5%</option>
                     <option value="21">21%</option>
+                    <option value="27">27%</option>
                   </select>
                 </div>
               </div>
@@ -401,8 +398,8 @@
                 <!-- select -->
                 <div class="form-group">
                   <label>Rubro</label>
-                  <select class="form-control" id="rubroEdit" required>
-                    <option disabled selected hidden value="Varios">Varios</option>
+                  <select type="text" class="form-control" id="rubroEdit" required>
+                    <option disabled selected hidden></option>
                   </select>
                 </div>
               </div>
@@ -424,6 +421,33 @@
           <button type="button" class="btn font-weight-bold btn-warning mr-3" onclick="editarProducto()"
             data-dismiss="modal">GUARDAR
             DATOS</button>
+          <button type="button" data-dismiss="modal" class="btn btn-default">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modalBorrar" tabindex="-1" role="dialog" aria-labelledby="modalDel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-danger">
+          <h5 class="modal-title" id="modalDel"></h5>
+          <input type="text" hidden id="idBorrar">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Una vez eliminado el producto no podrá recuperar la información del mismo.</p>
+          <p>Esta seguro que quiere eliminar el producto?</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn font-weight-bold btn-danger mr-3" type="button" disabled id="borrarBtn"
+            data-dismiss="modal" onclick="eliminarProducto()">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">ELIMINAR</span>
+          </button>
           <button type="button" data-dismiss="modal" class="btn btn-default">Cancelar</button>
         </div>
       </div>
@@ -459,6 +483,7 @@
   <!-- AdminLTE for demo purposes -->
   <script src="../Atoms/dist/js/demo.js"></script>
   <script src="../Atoms/productos.js"></script>
+  <script src="../Atoms/session.js"></script>
 </body>
 
 </html>
