--- a/LeaniM/Atoms/proveedores.html
+++ b/LeaniM/Atoms/proveedores.html
@@ -34,7 +34,7 @@
     rel="icon" type="image/x-icon" />
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body class="hold-transition sidebar-mini layout-fixed d-none">
   <div class="wrapper">
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -44,16 +44,16 @@
           <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./" class="nav-link">Dashboard</a>
+          <a href="./" class="nav-link" hidden>Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Productos" class="nav-link">Productos</a>
+          <a href="./Productos" class="nav-link" hidden>Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Pagos" class="nav-link">Pagos</a>
+          <a href="./Pagos" class="nav-link" hidden>Pagos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Remitos" class="nav-link">Remitos</a>
+          <a href="./Remitos" class="nav-link" hidden>Remitos</a>
         </li>
       </ul>
 
@@ -90,8 +90,8 @@
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-            <li class="nav-item">
-              <a href="./Index" class="nav-link">
+            <li class="nav-item" hidden>
+              <a href="./" class="nav-link">
                 <i class="fa fa-home nav-icon"></i>
                 <p>Dashboard</p>
               </a>
@@ -107,17 +107,12 @@
               <ul class="nav nav-treeview bg-navy pl-2">
                 <li class="nav-item">
                   <a href="./Clientes" class="nav-link">
-                    <i class="fa fa-search nav-icon"></i>
-                    <p>Búsqueda</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="./AltaClientes" class="nav-link">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
                 </li>
-                <li class="nav-item">
+
+                <li class="nav-item" hidden>
                   <a href="./PanelClientes" class="nav-link">
                     <i class="far fa-user nav-icon"></i>
                     <p>Panel Cliente</p>
@@ -143,13 +138,13 @@
                 <p>Compras</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Remitos" class="nav-link">
                 <i class="fas fa-columns nav-icon"></i>
                 <p>Remitos</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Pagos" class="nav-link">
                 <i class="fas fa-wallet nav-icon"></i>
                 <p>Pagos</p>
@@ -260,6 +255,14 @@
                               id="direccion" required>
                           </div>
                         </div>
+                        <div class="col-sm-3">
+                          <!-- text input -->
+                          <div class="form-group">
+                            <label>Localidad</label>
+                            <input type="text" class="form-control" placeholder="Ingrese la localidad del proveedor"
+                              id="localidad" required>
+                          </div>
+                        </div>
                         <div class="col-sm-2">
                           <!-- tel input -->
                           <div class="form-group">
@@ -323,22 +326,20 @@
                     <thead>
                       <tr>
                         <th>Nombre del Proveedor</th>
-                        <th>Tipo</th>
-                        <th>Contacto</th>
                         <th>Razón Social</th>
-                        <th>Dirección</th>
-                        <th style="max-width: 80px">Teléfono</th>
+                        <th>CUIT</th>
+                        <th style="max-width: 100px">Teléfono</th>
+                        <th>Localidad</th>
                         <th style="max-width: 60px">Modificar</th>
                       </tr>
                     </thead>
                     <tfoot>
                       <tr>
                         <th>Nombre del Proveedor</th>
-                        <th>Tipo</th>
-                        <th>Contacto</th>
                         <th>Razón Social</th>
-                        <th>Dirección</th>
-                        <th style="max-width: 80px">Teléfono</th>
+                        <th>CUIT</th>
+                        <th style="max-width: 100px">Teléfono</th>
+                        <th>Localidad</th>
                         <th style="max-width: 60px">Modificar</th>
                       </tr>
                     </tfoot>
@@ -363,7 +364,7 @@
   </div>
   <!-- ./wrapper -->
 
-  <!-- Modal -->
+  <!-- Modal Edit -->
   <div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -430,6 +431,14 @@
                 </div>
               </div>
               <div class="col-sm-4">
+                <!-- text input -->
+                <div class="form-group">
+                  <label>Localidad</label>
+                  <input type="text" class="form-control" placeholder="Ingrese la localidad" id="localidadEdit"
+                    required>
+                </div>
+              </div>
+              <div class="col-sm-4">
                 <!-- tel input -->
                 <div class="form-group">
                   <label>Teléfono <small>(sin guiones)</small></label>
@@ -468,6 +477,34 @@
     </div>
   </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="modalBorrar" tabindex="-1" role="dialog" aria-labelledby="modalDel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-danger">
+          <h5 class="modal-title" id="modalDel"></h5>
+          <input type="text" hidden id="idBorrar">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Puede que este proveedor tenga productos asociados.</p>
+          <p>Se recomienda primero eliminar los productos asociados y luego el proveedor.</p>
+          <p>Esta seguro que quiere eliminar el proveedor?</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn font-weight-bold btn-danger mr-3" type="button" disabled id="borrarBtn"
+            data-dismiss="modal" onclick="eliminarProveedor()">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">ELIMINAR</span>
+          </button>
+          <button type="button" data-dismiss="modal" class="btn btn-default">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- jQuery -->
   <script src="../Atoms/plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
@@ -497,6 +534,7 @@
   <!-- AdminLTE for demo purposes -->
   <script src="../Atoms/dist/js/demo.js"></script>
   <script src="../Atoms/proveedores.js"></script>
+  <script src="../Atoms/session.js"></script>
 </body>
 
 </html>
