--- a/LeaniM/Atoms/usuarios.html
+++ b/LeaniM/Atoms/usuarios.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="../Atoms/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
   <link rel="stylesheet" href="../Atoms/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <!-- DataTables -->
+  <link rel="stylesheet" href="../Atoms/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="../Atoms/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
   <!-- JQVMap -->
   <link rel="stylesheet" href="../Atoms/plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
@@ -33,7 +36,7 @@
     rel="icon" type="image/x-icon" />
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body class="hold-transition sidebar-mini layout-fixed d-none">
   <div class="wrapper">
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -43,16 +46,16 @@
           <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./" class="nav-link">Dashboard</a>
+          <a href="./" class="nav-link" hidden>Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Productos" class="nav-link">Productos</a>
+          <a href="./Productos" class="nav-link" hidden>Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Pagos" class="nav-link">Pagos</a>
+          <a href="./Pagos" class="nav-link" hidden>Pagos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./Remitos" class="nav-link">Remitos</a>
+          <a href="./Remitos" class="nav-link" hidden>Remitos</a>
         </li>
       </ul>
 
@@ -89,8 +92,8 @@
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-            <li class="nav-item">
-              <a href="./Index" class="nav-link">
+            <li class="nav-item" hidden>
+              <a href="./" class="nav-link">
                 <i class="fa fa-home nav-icon"></i>
                 <p>Dashboard</p>
               </a>
@@ -106,17 +109,12 @@
               <ul class="nav nav-treeview bg-navy pl-2">
                 <li class="nav-item">
                   <a href="./Clientes" class="nav-link">
-                    <i class="fa fa-search nav-icon"></i>
-                    <p>Búsqueda</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="./AltaClientes" class="nav-link">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
                 </li>
-                <li class="nav-item">
+
+                <li class="nav-item" hidden>
                   <a href="./PanelClientes" class="nav-link">
                     <i class="far fa-user nav-icon"></i>
                     <p>Panel Cliente</p>
@@ -142,13 +140,13 @@
                 <p>Compras</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Remitos" class="nav-link">
                 <i class="fas fa-columns nav-icon"></i>
                 <p>Remitos</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" hidden>
               <a href="./Pagos" class="nav-link">
                 <i class="fas fa-wallet nav-icon"></i>
                 <p>Pagos</p>
@@ -187,105 +185,39 @@
         <div class="container-fluid">
           <!-- row -->
           <div class="row">
-            <!-- Tabla de Usuarios -->
-            <div class="col-12 col-lg-6">
-              <div class="card">
-                <div class="card-header bg-success">
-                  <h3 class="card-title">Usuarios</h3>
-                </div>
-                <!-- /.card-header -->
-                <div class="card-body">
-                  <table class="table table-bordered">
-                    <thead>
-                      <tr>
-                        <th style="width: 15px">ID</th>
-                        <th>Nombre de Usuario</th>
-                        <th>Tipo de Usuario</th>
-                        <th>Panel</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>1.</td>
-                        <td>Admin</td>
-                        <td>Administrador</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Editar
-                            <i class="fa fa-user-edit"></i></a>
-                          <a class="btn btn-sm btn-danger" href="#">Borrar
-                            <i class="fa fa-user-minus"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>2.</td>
-                        <td>MatiEck</td>
-                        <td>Usuario General</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Editar
-                            <i class="fa fa-user-edit"></i></a>
-                          <a class="btn btn-sm btn-danger" href="#">Borrar
-                            <i class="fa fa-user-minus"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>3.</td>
-                        <td>Contador</td>
-                        <td>Revisor Contable</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Editar
-                            <i class="fa fa-user-edit"></i></a>
-                          <a class="btn btn-sm btn-danger" href="#">Borrar
-                            <i class="fa fa-user-minus"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4.</td>
-                        <td>LeaniM</td>
-                        <td>Administrador</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Editar
-                            <i class="fa fa-user-edit"></i></a>
-                          <a class="btn btn-sm btn-danger" href="#">Borrar
-                            <i class="fa fa-user-minus"></i></a>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div><!-- /Tabla de Usuarios -->
-
             <!-- Registro de Usuarios -->
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-4">
               <div class="card card-info">
                 <div class="card-header">
-                  <h3 class="card-title">Registro</h3>
+                  <h3 class="card-title">Registro Usuarios Leanim</h3>
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
-                <form class="form-horizontal">
+                <form class="form-horizontal" id="formUsuario">
                   <div class="card-body">
                     <div class="form-group row">
-                      <label for="user" class="col-sm-2 col-form-label">Usuario</label>
-                      <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user" placeholder="Nombre de Usuario">
-                      </div>
+                      <label for="nombre">Nombre</label>
+                      <input type="text" class="form-control" id="nombre" minlength="3" required>
                     </div>
                     <div class="form-group row">
-                      <label for="password" class="col-sm-2 col-form-label">Contraseña</label>
-                      <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="Contraseña">
-                      </div>
+                      <label for="apellido">Apellido</label>
+                      <input type="text" class="form-control" id="apellido" minlength="3" required>
                     </div>
                     <div class="form-group row">
-                      <label for="tipo" class="col-sm-2 col-form-label">Tipo de Usuario</label>
-                      <div class="col-sm-10">
-                        <select class="form-control">
-                          <option>Usuario General</option>
-                          <option>Revisor Contable</option>
-                          <option>Administrador</option>
-                        </select>
-                      </div>
+                      <label for="user">Usuario</label>
+                      <input type="text" class="form-control" id="user" minlength="4" required>
+                    </div>
+                    <div class="form-group row">
+                      <label for="password">Contraseña</label>
+                      <input type="password" class="form-control" id="password" minlength="6" required>
+                    </div>
+                    <div class="form-group row">
+                      <label for="rol">Tipo de Usuario</label>
+                      <select class="form-control" required id="rol">
+                        <option value="User" selected>Usuario General</option>
+                        <option value="Contador">Revisor Contable</option>
+                        <option value="Administrador">Administrador</option>
+                      </select>
                     </div>
                   </div>
                   <!-- /.card-body -->
@@ -297,6 +229,30 @@
                 </form>
               </div>
             </div><!-- /Registro Usuarios -->
+            <!-- Tabla de Usuarios -->
+            <div class="col-12 col-lg-8">
+              <div class="card">
+                <div class="card-header bg-success">
+                  <h3 class="card-title">Usuarios</h3>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">
+                  <table class="table table-bordered" id="tablaUsuarios">
+                    <thead>
+                      <tr>
+                        <th style="width: 15px">ID</th>
+                        <th>Nombre de Usuario</th>
+                        <th>Tipo de Usuario</th>
+                        <th>Fecha de Alta</th>
+                        <th>Panel</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div><!-- /Tabla de Usuarios -->
           </div>
           <!-- /.row (main row) -->
         </div><!-- /.container-fluid -->
@@ -312,6 +268,63 @@
   </div>
   <!-- ./wrapper -->
 
+  <!-- Modal Cambio Precio -->
+  <div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-warning">
+          <h5 class="modal-title" id="modal">Modificar Usuario</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form role="form" id="formEdit">
+            <div class="form-group row">
+              <label for="nombreEdit" class="col-sm-3 col-form-label">Nombre</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="nombreEdit" minlength="3" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="apellidoEdit" class="col-sm-3 col-form-label">Apellido</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="apellidoEdit" minlength="3" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="userEdit" class="col-sm-3 col-form-label">Usuario</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="userEdit" minlength="4" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="passwordEdit" class="col-sm-3 col-form-label">Contraseña</label>
+              <div class="col-sm-9">
+                <input type="password" class="form-control" id="passwordEdit" minlength="6" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="rolEdit" class="col-sm-3 col-form-label">Tipo de Usuario</label>
+              <div class="col-sm-9">
+                <select class="form-control" required id="rolEdit">
+                  <option value="User">Usuario General</option>
+                  <option value="Contador">Revisor Contable</option>
+                  <option value="Administrador">Administrador</option>
+                </select>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn font-weight-bold btn-success mr-3" onclick="editarUsuario()"
+            data-dismiss="modal">EDITAR USUARIO</button>
+          <button type="reset" data-dismiss="modal" class="btn btn-default">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- jQuery -->
   <script src="../Atoms/plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
@@ -322,30 +335,17 @@
   </script>
   <!-- Bootstrap 4 -->
   <script src="../Atoms/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="../Atoms/plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="../Atoms/plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="../Atoms/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="../Atoms/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="../Atoms/plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="../Atoms/plugins/moment/moment.min.js"></script>
-  <script src="../Atoms/plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="../Atoms/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="../Atoms/plugins/summernote/summernote-bs4.min.js"></script>
+  <!-- DataTables -->
+  <script src="../Atoms/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="../Atoms/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="../Atoms/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="../Atoms/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
   <!-- overlayScrollbars -->
   <script src="../Atoms/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../Atoms/dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../Atoms/dist/js/pages/dashboard.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="../Atoms/dist/js/demo.js"></script>
+  <script src="../Atoms/usuarios.js"></script>
+  <script src="../Atoms/session.js"></script>
 </body>
 
 </html>
