cambios de telefonos en sitio

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -75,7 +75,8 @@
       </ul>
     </div>
     <div class="px-3 pt-5 pb-3 m-0 mt-n5 bg-primary text-center sombra" id="nav-etiqueta">
-      <a href="https://wa.me/+/?text=Hola%20Mundo" target="_blank">
+      <a href="https://wa.me/+5491154735585/?text=Hola,%20estoy%20interesado%20en%20realizar%20una%20consulta"
+        target="_blank">
         <i class="fa fa-whatsapp fa-3x text-light mt-0"></i>
       </a>
     </div>
@@ -274,13 +275,18 @@
           recepción de pedidos es de 8 a 19 hs.
         </p>
         <h3 class="btn btn-lg btn-dark rounded-pill btn-envios p-2 pr-3">
-          <i class="fa fa-headset fa-round mr-2"></i>
-          0800-666-1234
+          <a href="tel:08105550048" class="text-white">
+            <i class="fa fa-headset fa-round mr-2"></i>
+            0810-555-0048
+          </a>
         </h3>
         <br>
         <h3 class="btn btn-lg btn-dark rounded-pill pl-0 btn-envios">
-          <i class="fa fa-whatsapp fa-round border-0 fa-2x"></i>
-          +54 911 5566-7788
+          <a href="https://wa.me/+5491154735585/?text=Hola,%20estoy%20interesado%20en%20realizar%20una%20consulta"
+            target="_blank" class="text-white">
+            <i class="fa fa-whatsapp fa-round border-0 fa-2x"></i>
+            +54 911 5473-5585
+          </a>
         </h3>
         <br>
         <h3 class="btn btn-lg btn-dark rounded-pill p-2 btn-envios">
@@ -646,7 +652,7 @@
         <h4 class="text-white">NO DUDES EN CONTACTARNOS AL</h4>
       </div>
       <div class="col-12 col-lg-6">
-        <h1 class="text-white"><i class="fa fa-phone-alt"></i> 0800-666-1234</h1>
+        <h1 class="text-white"><i class="fa fa-phone-alt"></i> 0810-555-0048</h1>
       </div>
     </div>
   </section>
@@ -706,12 +712,12 @@
             <p class="text-light font-weight-normal mb-0">
               <span class="font-weight-bold">Mosconi</span> / Gral. José Gervasio Artigas 4702
               <br>
-              0800-666-1234
+              0810-555-0048
             </p>
             <p class="text-light font-weight-normal mb-0">
               <span class="font-weight-bold">Griveo</span> / Gral. José Gervasio Artigas 4901
               <br>
-              0800-666-5678
+              0810-555-0048
             </p>
           </div>
         </div>
@@ -723,12 +729,12 @@
         <p class="text-light font-weight-normal mb-0">
           <span class="font-weight-bold">Mosconi</span> / Gral. José Gervasio Artigas 4702
           <br>
-          0800-666-1234
+          0810-555-0048
         </p>
         <p class="text-light font-weight-normal mb-0">
           <span class="font-weight-bold">Griveo</span> / Gral. José Gervasio Artigas 4901
           <br>
-          0800-666-5678
+          0810-555-0048
         </p>
       </div>
       <div class="px-5">
@@ -751,8 +757,10 @@
       </div>
       <div class="d-sm-none text-center row">
         <div class="text-center mx-auto" id="mapa-sitio">
-          <a class="btn bg-transparent" data-toggle="collapse" href="#sitemap" role="button" aria-expanded="false" aria-controls="sitemap">
-              <i class="fas fa-globe pr-2" aria-hidden="true"></i>MAPA DEL SITIO<i class="pl-2 fas fa-angle-double-down" aria-hidden="true"></i>
+          <a class="btn bg-transparent" data-toggle="collapse" href="#sitemap" role="button" aria-expanded="false"
+            aria-controls="sitemap">
+            <i class="fas fa-globe pr-2" aria-hidden="true"></i>MAPA DEL SITIO<i class="pl-2 fas fa-angle-double-down"
+              aria-hidden="true"></i>
           </a>
           <div class="collapse text-center pt-5" id="sitemap">
             <h3 class="text-white">Sitemap Nueva Social Fenix</h3>
