--- a/LeaniM/Atoms/productos.html
+++ b/LeaniM/Atoms/productos.html
@@ -228,8 +228,8 @@
                         <!-- text input -->
                         <div class="form-group">
                           <label>Precio</label>
-                          <input type="number" class="form-control" placeholder="Ingrese el precio ..." id="precio"
-                            required>
+                          <input type="number" step=".01" class="form-control" placeholder="Ingrese el precio ..."
+                            id="precio" required>
                         </div>
                       </div>
                       <div class="col-sm-1">
@@ -378,8 +378,8 @@
                 <!-- select -->
                 <div class="form-group">
                   <label>Precio</label>
-                  <input type="number" class="form-control" placeholder="Ingrese el precio ..." id="precioEdit"
-                    required>
+                  <input type="number" step=".01" class="form-control" placeholder="Ingrese el precio ..."
+                    id="precioEdit" required>
                 </div>
               </div>
               <div class="col-sm-4">
